# projects

./: .gitignore
StoreBridge/: .env.example  .gitignore  API_KEY_SETUP_GUIDE.md  API_SPECIFICATION.md  ARCHITECTURE.md  ARCHITECTURE_IMPROVEMENTS.md  DATABASE_SCHEMA.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_PROCESS.md  DEVELOPMENT_ROADMAP.md  DOCKER_POSTGRES_SETUP.md  OPERATIONS_MANUAL.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.txt  README.md  SETUP_GUIDE.md  TESTING_COMPLETE.md  TEST_PLAN.md  alembic.ini  create_tables.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  schema.sql
StoreBridge/alembic/: env.py
StoreBridge/app/: __init__.py  config.py  database.py  main.py
StoreBridge/app/api/: jobs.py
StoreBridge/app/connectors/: __init__.py  domeggook_client.py  naver_client.py
StoreBridge/app/models/: __init__.py  product.py
StoreBridge/app/services/: __init__.py  option_mapper.py  rate_limiter.py
StoreBridge/app/validators/: __init__.py  forbidden_word_validator.py  product_validator.py
StoreBridge/app/workers/: celery_app.py  tasks.py
StoreBridge/docker/postgres/: init.sh  pg_hba.conf
StoreBridge/tests/: __init__.py  conftest.py
StoreBridge/tests/e2e/: test_simple_flow.py
StoreBridge/tests/integration/api/: test_domeggook_integration.py  test_naver_integration.py
StoreBridge/tests/unit/services/: test_option_mapper.py  test_rate_limiter.py
project-inspector/: .gitignore  README.md  code_audit_prompt.md  package.json  project_documentation.md  project_goals.md  run.sh  run.sh.md  test_agents.py  test_call_analysis.py  test_formatting.py  test_show_calls.py
project-inspector/backend/: .gitignore
project-inspector/frontend/: package.json
side-project/CelestialSanctuary/: ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  PLAN.md  ROADMAP.md  settings.gradle.kts
youtube-project/: premiere-pro-learning-guide.md
youtube-project/ai-shorts-generator/: BLENDER_WORKFLOW.md  COMPREHENSIVE_SUMMARY.md  FEASIBILITY_ANALYSIS.md  PLAN.md  TIME_ESTIMATE.md  ZACK_STYLE_ANALYSIS.md
youtube-project/channel-monitor/: ANALYSIS_JensBender_ETL.md  DASHBOARD_DESIGN_GUIDE.md  DESIGN_VALIDATION.md  DEVELOPMENT_LOG.md  FEED_DEVELOPMENT_LOG.md  FEED_README.md  GCP_ACCOUNTS_EXPLAINED.md  GCP_SETUP_GUIDE.md  GROWTH_OPTIMIZED_DASHBOARD.md  PROJECT_ARCHITECTURE_DESIGN.md  README.md  README_POC.md  ROADMAP.md  SLACK_NOTIFICATION_DESIGN.md  SUBSCRIPTION_FEED_DESIGN.md  SUMMARY.md  YOUTUBE_API_DATA_GUIDE.md  requirements.txt  test_slack_notification.py  test_subscription_feed.py
youtube-project/notebooklm-automation/: QUICKSTART.md  README.md
youtube-project/premiere-pro-chapters/: 01-인터페이스-이해하기.md  02-기본-편집-작업.md  03-트랜지션-이펙트.md  04-텍스트-자막.md  05-오디오-편집.md  06-컬러-그레이딩.md  07-쇼츠-영상-제작.md  08-롱폼-영상-제작.md  09-고급-편집-기법.md  10-최적화-내보내기.md  11-실전-프로젝트.md  README.md
(+253 files in other folders)
